<resources>
    <string name="app_name">Productivity App Prototype</string>
    <string name="action_settings">Settings</string>
    <string name="tab_label_schedule">Schedule</string>
    <string name="tab_label_item_list">Item List</string>
    <string name="text_no_items">There are no items yet! You can add them with the plus button below.</string>
    <string name="dialog_delete">Delete item</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_done">Done</string>
    <string name="text_item">Item</string>
    <string name="text_time">Scheduled Time</string>
    <string name="item_name">Item Name</string>
    <string name="hint_one_time_item_name">Enter A One-Time Item Here</string>
    <string name="define_item_time"><![CDATA[Start &/OR End Times]]></string>
    <string name="one_time_item">OR Select A One-Time Item</string>
    <string name="existing_item">Select An Existing Item</string>
    <string name="schedule_new_item_heading">Schedule A New Item</string>
    <string name="choose">Choose</string>
    <string name="end_time">End Time:</string>
    <string name="start_time">Start Time:</string>
    <string name="awaiting_selection">Awaiting…</string>
    <string name="use_an_existing_item">OR Use An Existing Item</string>
    <string name="one_time_item_message">Use A One-Time Item</string>
    <string name="text_no_scheduled_items">There are no scheduled items yet! You can add them with the plus button below.</string>
    <string name="n_a">n/a</string>
    <string name="mark_as_completed">Mark As Completed</string>
    <string name="duration">Duration:</string>
    <string name="update">Update</string>
    <string name="edit_start_and_or_end_times"><![CDATA[Edit Start & OR End Times]]></string>
    <string name="scheduled_item_name">Scheduled Item Name</string>
    <string name="edit_item_name">Edit Item Name</string>
    <string name="scheduled_item_properties">Scheduled Item Properties</string>
    <string name="clear">Clear</string>
    <string name="enter_item_name_here">Enter Item Name Here</string>
</resources>
