<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_schedule_new_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_schedule_a_new_item_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/schedule_new_item_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="21sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_use_an_existing_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/use_an_existing_item"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_existing_items"
        app:layout_constraintTop_toBottomOf="@id/edit_one_time_item" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_existing_items"
        android:layout_width="0dp"
        android:layout_height="157dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#284CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_use_an_existing_item" />

    <TextView
        android:id="@+id/text_use_a_one_time_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/one_time_item_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_one_time_item"
        app:layout_constraintTop_toBottomOf="@+id/text_schedule_a_new_item_heading" />


    <EditText
        android:id="@+id/edit_one_time_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:imeOptions="actionDone"
        android:ems="10"
        android:hint="@string/hint_one_time_item_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_use_a_one_time_item"
        />


    <TextView
        android:id="@+id/text_select_start_end_time_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/define_item_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="21sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_existing_items" />

    <TextView
        android:id="@+id/text_start_time_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_select_start_end_time_heading" />

    <Button
        android:id="@+id/button_start_time"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/choose"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/button_clear_start_time"
        app:layout_constraintTop_toBottomOf="@+id/text_select_start_end_time_heading" />

    <Button
        android:id="@+id/button_clear_start_time"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/clear"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/button_clear_end_time"
        app:layout_constraintTop_toTopOf="@+id/button_start_time" />

    <Button
        android:id="@+id/button_clear_end_time"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/clear"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_end_time" />

    <TextView
        android:id="@+id/text_end_time_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/end_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_end_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_start_time_heading"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_end_time"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/choose"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/button_start_time"
        app:layout_constraintTop_toBottomOf="@+id/button_start_time" />

    <TextView
        android:id="@+id/text_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/awaiting_selection"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button_start_time"
        app:layout_constraintStart_toEndOf="@+id/text_start_time_heading"
        app:layout_constraintTop_toTopOf="@+id/text_start_time_heading" />

    <TextView
        android:id="@+id/text_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awaiting_selection"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/text_start_time"
        app:layout_constraintStart_toStartOf="@+id/text_start_time"
        app:layout_constraintTop_toTopOf="@+id/text_end_time_heading" />

    <TextView
        android:id="@+id/text_item_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/n_a"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/text_item_duration_heading"
        app:layout_constraintTop_toTopOf="@+id/text_item_duration_heading" />

    <TextView
        android:id="@+id/text_item_duration_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_end_time_heading" />

</android.support.constraint.ConstraintLayout>
