<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_edit_item_properties"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_scheduled_item_properties_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/scheduled_item_properties"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="21sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_edit_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_item_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_scheduled_item_name"
        app:layout_constraintTop_toBottomOf="@+id/text_scheduled_item_properties_heading" />

    <EditText
        android:id="@+id/edit_scheduled_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/scheduled_item_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_item_name"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/text_edit_start_end_time_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/edit_start_and_or_end_times"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="21sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_scheduled_item_name"/>

    <TextView
        android:id="@+id/text_start_time_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_start_end_time_heading" />

    <Button
        android:id="@+id/button_start_time"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/update"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/button_clear_start_time"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_start_end_time_heading" />

    <TextView
        android:id="@+id/text_end_time_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/end_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_end_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_start_time_heading"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_item_duration_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_end_time_heading" />

    <Button
        android:id="@+id/button_end_time"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/update"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/button_start_time"
        app:layout_constraintTop_toBottomOf="@+id/text_start_time_heading" />

    <TextView
        android:id="@+id/text_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button_start_time"
        app:layout_constraintStart_toEndOf="@+id/text_start_time_heading"
        app:layout_constraintTop_toTopOf="@+id/text_start_time_heading" />

    <TextView
        android:id="@+id/text_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/text_start_time"
        app:layout_constraintStart_toStartOf="@+id/text_start_time"
        app:layout_constraintTop_toTopOf="@+id/text_end_time_heading" />

    <TextView
        android:id="@+id/text_item_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_end_time"
        app:layout_constraintTop_toTopOf="@+id/text_item_duration_heading" />

    <CheckBox
        android:id="@+id/checkBox_mark_as_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/mark_as_completed"
        android:textColor="#31A836"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_item_duration_heading" />

    <Button
        android:id="@+id/button_clear_start_time"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:text="@string/clear"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/button_clear_end_time"
        app:layout_constraintTop_toTopOf="@+id/button_start_time" />

    <Button
        android:id="@+id/button_clear_end_time"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginRight="8dp"
        android:text="@string/clear"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_end_time" />

</android.support.constraint.ConstraintLayout>